@@ -3,35 +3,40 @@ package dao;
 import dao.api.IGenreDAO;
 import dto.GenreDTO;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 public class GenreMemoryDAO implements IGenreDAO {
 
-    private final List<GenreDTO> genres;
+    private final Map<Integer, GenreDTO> genres;
 
     public GenreMemoryDAO() {
-        genres = new ArrayList<>();
-        genres.add(new GenreDTO(1,"Pop"));
-        genres.add(new GenreDTO(2,"Rap"));
-        genres.add(new GenreDTO(3,"Techno"));
-        genres.add(new GenreDTO(4,"Dubstep"));
-        genres.add(new GenreDTO(5,"Jazz"));
-        genres.add(new GenreDTO(6,"Classic Rock"));
-        genres.add(new GenreDTO(7,"Country"));
-        genres.add(new GenreDTO(8,"Hard Rock"));
-        genres.add(new GenreDTO(9,"Blues"));
-        genres.add(new GenreDTO(10,"Hip Hop"));
+        genres = new HashMap<>();
+        genres.put(1, new GenreDTO(1, "Pop"));
+        genres.put(2, new GenreDTO(2, "Rap"));
+        genres.put(3, new GenreDTO(3, "Techno"));
+        genres.put(4, new GenreDTO(4, "Dubstep"));
+        genres.put(5, new GenreDTO(5, "Jazz"));
+        genres.put(6, new GenreDTO(6, "Classic Rock"));
+        genres.put(7, new GenreDTO(7, "Country"));
+        genres.put(8, new GenreDTO(8, "Hard Rock"));
+        genres.put(9, new GenreDTO(9, "Blues"));
+        genres.put(10, new GenreDTO(10, "Hip Hop"));
     }
 
     @Override
     public List<GenreDTO> getAll() {
-        return Collections.unmodifiableList(genres);
+        return List.copyOf(genres.values());
     }
 
     @Override
-    public boolean exists(GenreDTO genre) {
-        return genres.contains(genre);
+    public boolean exists(int id) {
+        return genres.containsKey(id);
+    }
+
+    @Override
+    public GenreDTO get(int id) {
+        return genres.get(id);
     }
 }
